--- a/git-sys/Cargo.toml
+++ b/git-sys/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["chip <chip@chip.sh>"]
 edition = "2018"
 
 [build-dependencies]
+anyhow = "1"
 bindgen = "0.52"
 make-cmd = "=0.1.0"
 num_cpus = "1"
-git-sys-header = { path = "../git-sys-header" }
+serde = { version = "1", features = ["derive"] }
+toml = "0.5"
