move away from global `the_repository` instance
instead use functions that allow us to specify the repository
expected to be used and steer clear of any used of `the_repository`

--- a/git-sys/src/bindings/repository.toml
+++ b/git-sys/src/bindings/repository.toml
@@ -1,5 +1,4 @@
 header = "#include <repository.h>"
 
 [whitelist]
-the_repository = "item"
-initialize_the_repository = "function"
+repo_init = "function"
