--- a/git-sys/src/bindings/repository.toml
+++ b/git-sys/src/bindings/repository.toml
@@ -1,4 +1,5 @@
 header = "#include <repository.h>"
 
 [whitelist]
-repo_init = "function"
+the_repository = "item"
+initialize_the_repository = "function"
