--- a/git/Cargo.toml
+++ b/git/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+parking_lot = "0.10"
+errno = "0.2"
 git-sys = { path = "../git-sys" }
+thiserror = "1"
